# weco-cli-mcp

./: .gitignore  .repomixignore  LICENSE  README.md  contributing.md  copilot-instructions.md  copilot-tools.json  pyproject.toml
.github/workflows/: lint.yml  release.yml
examples/: README.md
examples/cuda/: README.md  evaluate.py  guide.md
examples/hello-kernel-world/: README.md  colab_notebook_walkthrough.ipynb  evaluate.py  optimize.py  response.json
examples/metal/: README.md  evaluate.py  examples.rst  optimize.py
examples/prompt/: README.md  eval.py  optimize.py  prompt_guide.md
examples/simple-mlx/: evaluate.py  metal-examples.rst  optimize.py
examples/simple-torch/: evaluate.py  optimize.py
examples/spaceship-titanic/: README.md  evaluate.py  get_data.py  optimize.py  requirements-test.txt  submit.py  train.py  utils.py
examples/triton/: README.md  evaluate.py  optimize.py
weco/: __init__.py  api.py  auth.py  chatbot.py  cli.py  constants.py  optimizer.py  panels.py  utils.py
