# Build project configuration for release
[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "weco"
authors = [
    {name = "Weco AI Team", email = "dhruv@weco.ai"},
]
description = "Documentation for `weco`, a CLI for using Weco AI's code optimizer."
readme = "README.md"
version = "0.2.4"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = ["requests", "rich"]
keywords = ["AI", "Code Optimization", "Code Generation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

[project.scripts]
weco = "weco.cli:main"

[project.urls]
Homepage = "https://github.com/WecoAI/weco-cli"

[project.optional-dependencies]
dev = ["ruff", "build", "setuptools_scm"]

[tool.setuptools]
packages = ["weco"]

[tool.setuptools_scm]

# Lint and format code
[tool.ruff]
fix = false
include = ["*.py"]
exclude = [".git"]
force-exclude = true
respect-gitignore = true
indent-width = 4
line-length = 127

[tool.ruff.lint]
ignore = ["E402"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = true
